; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mips-tdep.c_read_signed_register.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mips-tdep.c_read_signed_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@current_gdbarch = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @read_signed_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_signed_register(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @current_gdbarch, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @register_size(i32 %4, i32 %5)
  %7 = call i8* @alloca(i32 %6)
  store i8* %7, i8** %3, align 8
  %8 = load i32, i32* %2, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @deprecated_read_register_gen(i32 %8, i8* %9)
  %11 = load i8*, i8** %3, align 8
  %12 = load i32, i32* @current_gdbarch, align 4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @register_size(i32 %12, i32 %13)
  %15 = call i32 @extract_signed_integer(i8* %11, i32 %14)
  ret i32 %15
}

declare dso_local i8* @alloca(i32) #1

declare dso_local i32 @register_size(i32, i32) #1

declare dso_local i32 @deprecated_read_register_gen(i32, i8*) #1

declare dso_local i32 @extract_signed_integer(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
